--- a/AWS/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
+++ b/AWS/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
@@ -77,7 +77,7 @@
     </div>
 
 
-    <p class="footnote"><i>This static website is deployed by <b> Students_Name </b> on AWS EC2 Instance using AWS
+    <p class="footnote"><i>This static website is deployed by <b> Nihal </b> on AWS EC2 Instance using AWS
       Clouldformation Service.</i></p>
 </body>
 
